<resources>
    <string name="app_name">Journalmatic</string>
    <string name="action_settings">Settings</string>
    <string name="create_sample_data">Create sample data</string>
    <string name="delete_all_entry">Delete all entries</string>
    <string name="all_deleted">"All entries deleted"</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="new_entry">New entry</string>
    <string name="entry_updated">Entry updated</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="entry_deleted">Entry deleted</string>
    <string name="today">Today</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="notificationsFreq">Event Frequency</string>
    <string name="darkmode">Dark Mode</string>
    <string name="notificationFreq_descr">Change how often selected events occur</string>
    <string name="creationFreq">Selected Events Frequency</string>
    <string name="creationFreq_descr">Change how often an entry is created</string>

    <string name="pref_feq_def_value">Daily</string>

    <string-array name="pref_feq_entries">
        <item value="1">Daily</item>
        <item value="2">Weekly</item>
        <item value="3">Monthly</item>
    </string-array>

    <string-array name="pref_feq_values">
        <item>daily</item>
        <item>weekly</item>
        <item>monthly</item>
    </string-array>
    <string name="title_activity_settings2">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="autoCreate_settings_title">Auto Generate Journal Entries</string>
    <string name="delete_today_entries">Delete today\'s entries</string>
    <string name="set_in_24">Set hour in 24hr time</string>
    <string name="weather_connection_text">Automated Weather Connection Text</string>
    <string name="calendar_connection_text">Automated Calendar Connection Text</string>
    <string name="export">Export</string>
    <string name="year">Year</string>
    <string name="day">Day</string>
    <string name="name">Name</string>
    <string name="file_name">File Name</string>
    <string name="starting_date">Starting Date</string>
    <string name="ending_date">Ending date</string>
    <string name="month">Month</string>
    <string name="leave_blank">Leave any date blank to get everything</string>
    <string name="test_notification_and_generate">Test Notification and Generate</string>
    <string name="test">Test</string>
    <string name="defaultFileName">default</string>
</resources>
