<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notifications">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="auto_create"
            app:title="@string/autoCreate_settings_title" />

        <SwitchPreferenceCompat
            app:key="notify"
            app:title="@string/notifications"
            app:defaultValue="true"/>

        <ListPreference
            app:defaultValue="@string/pref_feq_def_value"
            app:entries="@array/pref_feq_entries"
            app:entryValues="@array/pref_feq_values"
            app:key="notification_feq"
            app:summary="@string/notificationFreq_descr"
            app:title="@string/notificationsFreq" />

        <EditTextPreference
            android:defaultValue="20"
            android:key="reminder_time"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Set Reminder Hour"
            app:summary="@string/set_in_24" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/weather_connection_text"
        android:summary="Do not add spaces before or after">

        <SwitchPreferenceCompat
            app:key="weather"
            app:title="Use Weather for Auto Generate"
            app:defaultValue="true"/>

        <EditTextPreference
            android:dependency="weather"
            android:defaultValue="The weather today in"
            android:key="weather_1"
            android:title="______ [Name of city]"/>

        <EditTextPreference
            android:dependency="weather"
            android:defaultValue="consisted of"
            android:key="weather_2"
            android:title="______ [Weather Description]"/>

        <EditTextPreference
            android:dependency="weather"
            android:defaultValue="and was"
            android:key="weather_3"
            android:title="______ [Temperature]"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/calendar_connection_text"
        android:summary="Do not add spaces before or after">

        <SwitchPreferenceCompat
            app:key="calendar"
            app:title="Use Calendar for Auto Generate"
            app:defaultValue="true"/>

        <EditTextPreference
            android:dependency="calendar"
            android:defaultValue="My Events Today consisted of:"
            android:key="calendar_1"
            android:title="______ [new line then list of events]"/>

        <EditTextPreference
            android:dependency="calendar"
            android:defaultValue="located at:"
            android:key="calendar_2"
            android:title="______ [new line then events location]"/>

    </PreferenceCategory>

<!--    <ListPreference-->
<!--        app:dependency="auto_create"-->
<!--        app:defaultValue="@string/pref_feq_def_value"-->
<!--        app:entries="@array/pref_feq_entries"-->
<!--        app:entryValues="@array/pref_feq_values"-->
<!--        app:key="creation_time"-->
<!--        app:summary="@string/creationFreq_descr"-->
<!--        app:title="@string/creationFreq" />-->


<!--    <PreferenceCategory app:title="Appearance">-->
<!--        <SwitchPreferenceCompat-->
<!--            app:key="dark"-->
<!--            app:title="@string/darkmode"-->
<!--            app:defaultValue="false"/>-->

<!--    </PreferenceCategory>-->

</PreferenceScreen>
