<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaveJournalInRange">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/month"
        app:layout_constraintBottom_toTopOf="@+id/month2"
        app:layout_constraintStart_toStartOf="@+id/month2" />

    <EditText
        android:id="@+id/year2"
        android:layout_width="61dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/month2"
        app:layout_constraintTop_toTopOf="@+id/month2" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_margin="50dp"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_margin="70dp"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/month1" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="50dp"
        android:background="#c0c0c0"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/month2"
        tools:layout_editor_absoluteX="50dp" />

    <EditText
        android:id="@+id/day2"
        android:layout_width="61dp"
        android:layout_height="46dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/month2"
        app:layout_constraintTop_toTopOf="@+id/month2" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/day"
        app:layout_constraintBottom_toTopOf="@+id/day2"
        app:layout_constraintStart_toStartOf="@+id/day2" />

    <EditText
        android:id="@+id/month2"
        android:layout_width="61dp"
        android:layout_height="46dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month1" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@+id/year2"
        app:layout_constraintStart_toStartOf="@+id/year2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/export"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month2" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/file_name"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/starting_date"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/day1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/ending_date"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/day"
        app:layout_constraintBottom_toTopOf="@+id/day1"
        app:layout_constraintStart_toStartOf="@+id/day1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/month"
        app:layout_constraintBottom_toTopOf="@+id/month1"
        app:layout_constraintStart_toStartOf="@+id/month1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@+id/year1"
        app:layout_constraintStart_toStartOf="@+id/year1" />

    <EditText
        android:id="@+id/day1"
        android:layout_width="61dp"
        android:layout_height="46dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/month1"
        app:layout_constraintTop_toTopOf="@+id/month1" />

    <EditText
        android:id="@+id/month1"
        android:layout_width="61dp"
        android:layout_height="46dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/year1"
        android:layout_width="61dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/month1"
        app:layout_constraintTop_toTopOf="@+id/month1" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave_blank"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />


</androidx.constraintlayout.widget.ConstraintLayout>